--- a/0x02-CSS_advanced/styles/21-style.css
+++ b/0x02-CSS_advanced/styles/21-style.css
@@ -180,16 +180,23 @@ ul.row {
     list-style: none;
 }
 
-.col-1-3 {
-    width: 33.33%;
+.row::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+[class^="col-"] {
     float: left;
     padding: 0.5rem;
 }
 
+.col-1-3 {
+    width: 33.33%;
+}
+
 .col-1-2 {
     width: 50%;
-    float: left;
-    padding: 0.5rem;
 }
 
 .footer {
