--- a/0x02-CSS_advanced/styles/24-style.css
+++ b/0x02-CSS_advanced/styles/24-style.css
@@ -180,16 +180,45 @@ ul.row {
     list-style: none;
 }
 
-.col-1-3 {
-    width: 33.33%;
+.row::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+[class^="col-"] {
     float: left;
     padding: 0.5rem;
 }
 
+.col-1-3 {
+    width: 33.33%;
+}
+
 .col-1-2 {
     width: 50%;
-    float: left;
-    padding: 0.5rem;
+}
+
+.card-services .card-title {
+    margin: 0;
+}
+
+.card-services a {
+    display: block;
+    padding: 2rem;
+    background-color: var(--color-light-grey);
+}
+
+.card-services a:hover {
+    color: var(--color-white);
+    background-color: var(--color-primary);
+    text-decoration: none;
+}
+
+[data-section-theme="dark"] {
+    --text-color: var(--color-white);
+    --section-title-color: var(--color-white);
+    background-color: var(--color-black);
 }
 
 .footer {
@@ -204,4 +233,16 @@ ul.row {
     margin: 0;
     font-size: var(--font-size-small);
     color: var(--text-color);
+}
+
+.footer-address {
+    color: var(--text-color);
+}
+
+.social-link {
+    display: block;
+}
+
+.social-link > svg {
+    fill: var(--text-color);
 }
