--- a/0x02-CSS_advanced/styles/26-style.css
+++ b/0x02-CSS_advanced/styles/26-style.css
@@ -46,6 +46,16 @@
     --nav-item-link-hover: var(--color-primary);
 
     --section-tagline-margin: 0;
+
+    --button-display: inline-block;
+    --button-padding: 1.5rem 3rem;
+    --button-border: 0.2rem solid var(--color-primary);
+    --button-color: var(--color-black);
+    --button-text-decoration: none;
+    --button-font-size: var(--font-size-large);
+    --button-hover-color: var(--color-white);
+    --button-hover-text-decoration: none;
+    --button-hover-background: var(--color-primary);
 }
 
 *,
@@ -95,6 +105,21 @@ a:hover {
 
 a:active {
     background-color: var(--color-light-grey);
+}
+
+.button {
+    display: var(--button-display);
+    padding: var(--button-padding);
+    border: var(--button-border);
+    font-size: var(--button-font-size);
+    color: var(--button-color);
+    text-decoration: var(--button-text-decoration);
+}
+
+.button:hover {
+    color: var(--button-hover-color);
+    text-decoration: var(--button-hover-text-decoration);
+    background: var(--button-hover-background);
 }
 
 .navbar-menu {
@@ -180,16 +205,62 @@ ul.row {
     list-style: none;
 }
 
-.col-1-3 {
-    width: 33.33%;
+.row::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+[class^="col-"] {
     float: left;
     padding: 0.5rem;
 }
 
+.col-1-3 {
+    width: 33.33%;
+}
+
 .col-1-2 {
     width: 50%;
-    float: left;
-    padding: 0.5rem;
+}
+
+.card-services .card-title {
+    margin: 0;
+}
+
+.card-services a {
+    display: block;
+    padding: 2rem;
+    background-color: var(--color-light-grey);
+}
+
+.card-services a:hover {
+    color: var(--color-white);
+    background-color: var(--color-primary);
+    text-decoration: none;
+}
+
+.card-testimonial {
+    text-align: center;
+}
+
+.card-testimonial .card-avatar {
+    border-radius: 50%;
+    width: 10rem;
+    height: 10rem;
+}
+
+.card-testimonial .card-quote cite {
+    display: block;
+    padding-top: 1rem;
+    color: var(--color-primary);
+}
+
+[data-section-theme="dark"] {
+    --text-color: var(--color-white);
+    --section-title-color: var(--color-white);
+    background-color: var(--color-black);
+    --button-color: var(--color-white);
 }
 
 .footer {
@@ -204,4 +275,16 @@ ul.row {
     margin: 0;
     font-size: var(--font-size-small);
     color: var(--text-color);
+}
+
+.footer-address {
+    color: var(--text-color);
+}
+
+.social-link {
+    display: block;
+}
+
+.social-link > svg {
+    fill: var(--text-color);
 }
