--- a/0x03-responsive_design/02-1-styles.css
+++ b/0x03-responsive_design/02-1-styles.css
@@ -47,7 +47,7 @@
     --line-height-big: 1.8;
 
     /** SECTION **/
-    --section-padding: 5rem 0;
+    --section-padding: 5rem 1.5rem;
     --section-header-padding: 0 0 3rem;
     --section-header-align: center;
     --section-title-font-size: var(--font-size-xx-large);
@@ -60,7 +60,7 @@
     --section-tagline-font-family: var(--font-family-headings);
     --section-tagline-font-weight: var(--font-weight-bold);
     --section-tagline-margin: 0;
-    --section-body-padding: 2rem 0 4rem;
+    --section-body-padding: 2rem 0 0;
     --section-footer-padding: 3rem 0 0;
     --section-footer-align: center;
 
@@ -177,13 +177,18 @@
     white-space: nowrap;
   }
 
+  main img {
+    width: 100%;
+    height: auto;
+  }
+
   /*** 2. LAYOUT ***/
 
   /* Layout
       ============================= */
 
   .container {
-    width: 960px;
+    max-width: 960px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -211,6 +216,21 @@
 
   .col-1-2 {
     width: calc((100% / 2) - 2rem);
+  }
+
+  @media screen and (max-width: 767px) {
+    ul.row, .row {
+      flex-direction: column;
+      margin: 0;
+    }
+
+    [class^='col-'] {
+      margin: 0 0 3rem 0;
+    }
+
+    .col-1-3, .col-1-2 {
+      width: 100%;
+    }
   }
 
   /* Navbar
@@ -260,6 +280,12 @@
   .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
+  }
+
+  @media screen and (max-width: 767px) {
+    .navbar-menu {
+      display: none;
+    }
   }
 
   /* Header
@@ -398,6 +424,12 @@
 
   .section-latest-news .row {
     flex-direction: row-reverse;
+  }
+
+  @media screen and (max-width: 767px) {
+    .row .section-latest-news {
+      flex-direction: column;
+    }
   }
 
   /* Section SERVICES
